@@ -29,6 +29,8 @@ Bug fixes/enhancements:
 - GLRenderer: OpenGL errors could leak through into Python and produce exceptions
   on unrelated PyOpenGL calls. The error flag is now cleared at the end of
   the C++ rendering code (bug #2974422).
+- sequence: Comparison of SeqStrings didn't work properly when the string parts
+  did already differ (in that case, numbers were completely ignored)
 - sequence: buildSequences() didn't work properly when assumeFiles was set to
   True and there was more than one number inside the path. Thanks to Scott Ballard.
 - viewer: Joystick support was partially broken (copy&paste error). Thanks
